tests/errors/002-parsing/003-expected-expression/004-in-arguments-list/007-final-decl-assign.xxx
x := (a := 1, b := ) => () { }

// @TODO This should yield the same error.
// x := (a := 1, b :=) => () { }
